@@ -293,7 +293,9 @@ print_help <- function(object) {
 #'     is \code{TRUE}.
 #' @param positional_arguments Whether \code{parse_args} should look for and
 #'     return a character vector of \emph{positional} arguments.  Default is
-#'     \code{FALSE}.
+#'     \code{FALSE}.  Can also be a numeric denoting the exact number of
+#'     supported arguments, or a numeric vector of length two denoting the
+#'     minimum and maximum number of arguments (\code{Inf} for no limit).
 #' @return Returns a list containing option values if
 #'     \code{positional_arguments} is \code{FALSE} (the default).  Otherwise returns
 #'     a list with field \code{options} containing our option values as well as
@@ -353,12 +355,21 @@ parse_args <- function(object, args = commandArgs(trailingOnly = TRUE),
         spec[ii, ] <- .convert_to_getopt( object@options[[ii]] )
     }
 
+    if(is.logical(positional_arguments)) {
+        positional_arguments <- if(positional_arguments) c(0, Inf) else 0L
+    } else if(is.numeric(positional_arguments)) {
+        if(!(length(positional_arguments) %in% 1L:2L))
+            stop("positional_arguments must have length 1 or 2")
+    } else
+        stop("positional_arguments must be logical or numeric")
+
     # pull out positional arguments if ``positional_arguments`` was set to TRUE
-    if(positional_arguments) {
+    # or not 0 or c(0, 0)
+    arguments_positional <- character(0)
+    if(max(positional_arguments) > 0) {
         os_and_n_arg <- .get_option_strings_and_n_arguments(object)
         original_arguments <- args
         args <- NULL
-        arguments_positional <- character(0)
         is_taken <- FALSE # set to true if optional argument needs to take next argument
         for(argument in original_arguments) {
             if(is_taken) {
@@ -402,7 +413,17 @@ parse_args <- function(object, args = commandArgs(trailingOnly = TRUE),
         print_help(object)
         stop("help requested")
     }
-    if(positional_arguments) {
+    if (length(arguments_positional) < min(positional_arguments)) {
+      print_help(object)
+      stop(sprintf("required at least %g positional arguments, got %g",
+                   min(positional_arguments), length(arguments_positional)))
+    }
+    if (length(arguments_positional) > max(positional_arguments)) {
+      print_help(object)
+      stop(sprintf("required at most %g positional arguments, got %g",
+                   max(positional_arguments), length(arguments_positional)))
+    }
+    if(max(positional_arguments) > 0) {
         return(list(options = options_list, args = arguments_positional))
     } else {    
         return(options_list)
